@@ -1,0 +1,1 @@
+list_superusers_statement ::= LIST SUPERUSERS
